--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>HTML Quiz</title>
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
-    <link href="https://fonts.googleapis.com/css?family=pangolin:400,700|proxima+Nova" rel="stylesheet" type="text/css" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=pangolin:400,700|proxima+Nova" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/script.js" type="text/javascript" defer=true></script>
 </head>
@@ -59,7 +59,8 @@
                 <p class="title with-margin">Count Your Score</p>
 
                 <p class="with-margin">
-                    You will get 1 point for each correct answer. At the end of the Quiz, your total score will be displayed. Maximum score is 10 points.
+                    You will get 1 point for each correct answer. At the end of the Quiz, your total score will be
+                    displayed. Maximum score is 10 points.
                 </p>
                 <div class="box">
                     <p class="title with-margin">Start the quiz</p>
